objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Final_OAV_Calculation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>1. IA Override Value; else 2. Purchase Price / Summary_Appraised_Value (whichever is less) - OAV Discount Amount; else 3. Summary Appraised Value - OAV Discount Amount; else 4. Home Value

This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <label>Final OAV</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Title_Held__c</fullName>
        <label>Final Title to be Held</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individually</fullName>
                </value>
                <value>
                    <fullName>Jointly</fullName>
                </value>
                <value>
                    <fullName>In Trust</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Institution_Name__c</fullName>
        <label>Financial Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finder_Fee_Commission__c</fullName>
        <inlineHelpText>5% if signed within 45 days 
3% if signed 45+ days</inlineHelpText>
        <label>Finder Fee Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finder_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any HO deal referred by an Non-licensed individual that requires a fee to be paid</inlineHelpText>
        <label>Finder Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Appraised_Value__c</fullName>
        <label>First Appraised Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Closed_Lost_Timestamp__c</fullName>
        <label>First Closed Lost Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Lender_Open_Date__c</fullName>
        <label>First Lender Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Lender_Original_Amount__c</fullName>
        <label>First Lender Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Time_Homebuyer__c</fullName>
        <label>First Time Home Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormId__c</fullName>
        <label>FormId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormURL__c</fullName>
        <label>FormURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Front_End_Ratio__c</fullName>
        <label>Front-End Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funded_Deal_Record_Count__c</fullName>
        <formula>IF( !ISNULL(Wire_Reference_Number__c )  , true, false)</formula>
        <label>Funded Deal Record Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Value_Backfill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future Value Backfill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google click id for paid search advertising campaign attribution</description>
        <inlineHelpText>Google click ID</inlineHelpText>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_All_States__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate All States</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Amount__c</fullName>
        <label>Gift_Funds_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Funds_Dropdown__c</fullName>
        <label>Gift Funds Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Government_Fee__c</fullName>
        <label>Government Fee</label>
        <summarizedField>OpportunityLineItem.Final_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Government Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Greenlight_Conditions__c</fullName>
        <label>Greenlight Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Greenlight_Decision_Notes__c</fullName>
        <label>Greenlight Decision Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Greenlight_Id__c</fullName>
        <label>Greenlight Inquiry ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenlight_Requires_Second_Appraisal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greenlight Requires Second Appraisal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Proceeds__c</fullName>
        <description>Gross Proceeds to the Customer. Used in Nintex HO Offer Letter. Do not deprecate. AM.</description>
        <formula>Estimated_Funding_Amount__c -  Customer_Transaction_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Proceeds to the Customer (used in the Offer Letter) = [Estimated Funding Amount] - [Transaction Fee]</inlineHelpText>
        <label>Gross Proceeds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_2_Appraisals2__c</fullName>
        <description>Used in Nintex for OAV Document in HO Offer Package</description>
        <formula>IF  ((Appraisal_Received__c = True &amp;&amp;  Second_Appraisal_Received__c = True), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has 2 Appraisals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Real_Estate_Agent__c</fullName>
        <label>Has Real Estate Agent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_selected_a_home__c</fullName>
        <label>Have you selected a home?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeBuyer_vs_Other_Options_Date_Time__c</fullName>
        <label>HomeBuyer vs. Other Options Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HomeBuyer_vs_Other_Options__c</fullName>
        <label>HomeBuyer vs Other Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable with topic</fullName>
                </value>
                <value>
                    <fullName>Requested additional information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeOwner_vs_Other_Options_Date_Time__c</fullName>
        <label>HomeOwner vs. Other Options Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HomeOwner_vs_Other_Options__c</fullName>
        <label>HomeOwner vs Other Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable with topic</fullName>
                </value>
                <value>
                    <fullName>Requested additional information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Inspection_Ordered_Date_TIme__c</fullName>
        <label>Home Inspection Ordered Date TIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Home_Inspection_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Inspection has been ordered by Origination Ops</description>
        <label>Home Inspection Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Inspection_Received_Date_Time__c</fullName>
        <label>Home Inspection Received Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Home_Inspection_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Inspection has been received</description>
        <label>Home Inspection Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Inspector_Vendor_Name__c</fullName>
        <label>Home Inspector Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the Estimated Home Value stated from customer or Unison AVM</description>
        <inlineHelpText>This is the Estimated Home Value stated from customer or Unison AVM</inlineHelpText>
        <label>Estimated Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HouseCanary_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HouseCanary Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Down_Payment__c</fullName>
        <description>This value comes from Assets Down Payment from the Lead (Application)</description>
        <inlineHelpText>This value comes from Assets Down Payment from the Lead (Application)</inlineHelpText>
        <label>Household Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_FirstREX__c</fullName>
        <label>How did you hear about Unison?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IA_Deal_Tags__c</fullName>
        <label>IA Deal Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2nd Appraisal - Client Requested</fullName>
                </value>
                <value>
                    <fullName>2nd Appraisal - High Discrepancy</fullName>
                </value>
                <value>
                    <fullName>2nd Appraisal - IA Requested</fullName>
                </value>
                <value>
                    <fullName>3+ Applicants</fullName>
                </value>
                <value>
                    <fullName>3rd Appraisal - Client Requested</fullName>
                </value>
                <value>
                    <fullName>3rd Appraisal - IA Requested</fullName>
                </value>
                <value>
                    <fullName>Accessory Unit</fullName>
                </value>
                <value>
                    <fullName>Actively Remodeling</fullName>
                </value>
                <value>
                    <fullName>Adverse View</fullName>
                </value>
                <value>
                    <fullName>Affidavit Required</fullName>
                </value>
                <value>
                    <fullName>Age-Restricted Community</fullName>
                </value>
                <value>
                    <fullName>Agreement of Trust</fullName>
                </value>
                <value>
                    <fullName>Alimony Payee</fullName>
                </value>
                <value>
                    <fullName>Alimony Payor</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Appraisal Above Estimate</fullName>
                </value>
                <value>
                    <fullName>Appraisal Above Recent Purchase Price</fullName>
                </value>
                <value>
                    <fullName>Appraisal Below Estimate</fullName>
                </value>
                <value>
                    <fullName>Appraisal Below Recent Purchase Price</fullName>
                </value>
                <value>
                    <fullName>Appraised 'Subject-To'</fullName>
                </value>
                <value>
                    <fullName>Appraised 10% Above Average AVM</fullName>
                </value>
                <value>
                    <fullName>Appraised 10% Below Average AVM</fullName>
                </value>
                <value>
                    <fullName>Appraised Above Listing</fullName>
                </value>
                <value>
                    <fullName>Appraised Below Listing</fullName>
                </value>
                <value>
                    <fullName>Area Lacks Similar Comparables</fullName>
                </value>
                <value>
                    <fullName>Area Lacks Sufficient Sale Volume</fullName>
                </value>
                <value>
                    <fullName>Asset Dissipation</fullName>
                </value>
                <value>
                    <fullName>Atypical Architectural Design</fullName>
                </value>
                <value>
                    <fullName>Atypical Lot Size</fullName>
                </value>
                <value>
                    <fullName>Atypical Property Features</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_Decline_Notes2__c</fullName>
        <description>Additional notes to support decline reason(s)</description>
        <inlineHelpText>Additional notes to support decline reason(s)</inlineHelpText>
        <label>IA Decline Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IA_Decline_Reason_PS__c</fullName>
        <description>Customer facing decline reasons for Program Specialist to communicate to customer.</description>
        <label>IA Decline Reason - PS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant does not meet other application criteria</fullName>
                </value>
                <value>
                    <fullName>Client in the middle of legal proceedings</fullName>
                </value>
                <value>
                    <fullName>Credit Score Below Minimum</fullName>
                </value>
                <value>
                    <fullName>Delinquency</fullName>
                </value>
                <value>
                    <fullName>Excessive obligations in relation to income</fullName>
                </value>
                <value>
                    <fullName>Felony</fullName>
                </value>
                <value>
                    <fullName>HB mortgage app was declined</fullName>
                </value>
                <value>
                    <fullName>High DTI</fullName>
                </value>
                <value>
                    <fullName>Home Owners Association not eligible</fullName>
                </value>
                <value>
                    <fullName>I/O mortgage</fullName>
                </value>
                <value>
                    <fullName>Ineligible property holding type - Leasehold</fullName>
                </value>
                <value>
                    <fullName>Ineligible property type</fullName>
                </value>
                <value>
                    <fullName>Insufficient equity in the property</fullName>
                </value>
                <value>
                    <fullName>Insufficient income</fullName>
                </value>
                <value>
                    <fullName>Insufficient proceeds to meet needed payoffs</fullName>
                </value>
                <value>
                    <fullName>Lates on Subject Mortgage</fullName>
                </value>
                <value>
                    <fullName>LTV Exceeds Limit</fullName>
                </value>
                <value>
                    <fullName>No credit file</fullName>
                </value>
                <value>
                    <fullName>Notice of default, foreclosure or repossession</fullName>
                </value>
                <value>
                    <fullName>Number of recent inquiries on credit bureau report</fullName>
                </value>
                <value>
                    <fullName>Numerous judgements</fullName>
                </value>
                <value>
                    <fullName>Poor Condition</fullName>
                </value>
                <value>
                    <fullName>Private Mortgage</fullName>
                </value>
                <value>
                    <fullName>Recent Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage</fullName>
                </value>
                <value>
                    <fullName>Sale Restricted Community</fullName>
                </value>
                <value>
                    <fullName>Temporary or irregular employment</fullName>
                </value>
                <value>
                    <fullName>Trust restrictions</fullName>
                </value>
                <value>
                    <fullName>Unable to verify employment</fullName>
                </value>
                <value>
                    <fullName>Undisclosed liens &amp; judgements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_Decline_Reason__c</fullName>
        <description>Reasons given when an IA declines a file. Maps to corollary picklist values sent to the PS for talking points, and those that show up on an adverse action letter sent to the customer.</description>
        <inlineHelpText>Reasons given when an IA declines a file.</inlineHelpText>
        <label>IA Decline Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atypical Property</fullName>
                </value>
                <value>
                    <fullName>C5 rating</fullName>
                </value>
                <value>
                    <fullName>Client in the middle of legal proceedings</fullName>
                </value>
                <value>
                    <fullName>Credit Score Below Minimum</fullName>
                </value>
                <value>
                    <fullName>Delinquency</fullName>
                </value>
                <value>
                    <fullName>Excessive Adjustments</fullName>
                </value>
                <value>
                    <fullName>Felony</fullName>
                </value>
                <value>
                    <fullName>Fraud/Behavioral Risk</fullName>
                </value>
                <value>
                    <fullName>HB mortgage app was declined</fullName>
                </value>
                <value>
                    <fullName>High DTI</fullName>
                </value>
                <value>
                    <fullName>HOA Complications</fullName>
                </value>
                <value>
                    <fullName>Hoarding</fullName>
                </value>
                <value>
                    <fullName>I/O mortgage</fullName>
                </value>
                <value>
                    <fullName>Illegal use of space</fullName>
                </value>
                <value>
                    <fullName>Income Calculated Incorrectly at Submission</fullName>
                </value>
                <value>
                    <fullName>Ineligible property holding type - Leasehold</fullName>
                </value>
                <value>
                    <fullName>Ineligible property type</fullName>
                </value>
                <value>
                    <fullName>Insufficient equity in the property</fullName>
                </value>
                <value>
                    <fullName>Insufficient income</fullName>
                </value>
                <value>
                    <fullName>Insufficient proceeds to meet needed payoffs</fullName>
                </value>
                <value>
                    <fullName>Lates on Subject Mortgage</fullName>
                </value>
                <value>
                    <fullName>LTV Exceeds Limit</fullName>
                </value>
                <value>
                    <fullName>No credit file</fullName>
                </value>
                <value>
                    <fullName>Notice of default, foreclosure or repossession</fullName>
                </value>
                <value>
                    <fullName>Number of recent inquiries on credit bureau report</fullName>
                </value>
                <value>
                    <fullName>Numerous judgements</fullName>
                </value>
                <value>
                    <fullName>Overvaluation</fullName>
                </value>
                <value>
                    <fullName>Poor Condition</fullName>
                </value>
                <value>
                    <fullName>Price Confidence</fullName>
                </value>
                <value>
                    <fullName>Private Mortgage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_Decline_Status__c</fullName>
        <label>IA Decline Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved - Continue to Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Denied - Continue to IDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_OAV_Override__c</fullName>
        <inlineHelpText>Manually entered OAV by IA. Only available on "Lock Screen". Overrides the Final OAV implied by other data.</inlineHelpText>
        <label>IA OAV Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IA_Passbook_Override_Explanation__c</fullName>
        <description>IA provided reasoning as to why they are overriding the automated Passbook decision. This field is used by the Portfolio Management Team: do not deprecate or otherwise alter without their explicit authorization to do so. This field has been determined to be necessary as of Q1 2020. Subject to review for relevance Q4 2021.</description>
        <inlineHelpText>IA provided reasoning as to why they are overriding the automated Passbook decision.</inlineHelpText>
        <label>IA Passbook Override Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IA_Passbook_Override_Reasons__c</fullName>
        <label>IA Passbook Override Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Liquid Reserves</fullName>
                </value>
                <value>
                    <fullName>High liquid Assets</fullName>
                </value>
                <value>
                    <fullName>Strong Credit History</fullName>
                </value>
                <value>
                    <fullName>Confident in Income Profile</fullName>
                </value>
                <value>
                    <fullName>Additional Sources of Income</fullName>
                </value>
                <value>
                    <fullName>Favorable Property Appreciation</fullName>
                </value>
                <value>
                    <fullName>Low Non-Housing Debt</fullName>
                </value>
                <value>
                    <fullName>Just-Over Threshold</fullName>
                </value>
                <value>
                    <fullName>Other (See Notes)</fullName>
                </value>
                <value>
                    <fullName>Lowered MAD Cap</fullName>
                </value>
                <value>
                    <fullName>Low Property Debt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_Passbook_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set by IA. Reason field is required.</inlineHelpText>
        <label>IA Passbook Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_Peer_Reviewer__c</fullName>
        <label>IA Peer Reviewer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Approval_Score__c</fullName>
        <label>IM Approval Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_Approved_Date__c</fullName>
        <label>IM Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IM_Approver__c</fullName>
        <label>IM Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_App1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of applicant income including base, bonus', commission, div/interest, overtime, social security, rental, and other. See values on Application object for reference.</inlineHelpText>
        <label>Applicant Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Co_App1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of co-applicant income including base, bonus', commission, div/interest, overtime, social security, rental, and other. See values on Application object for reference.</inlineHelpText>
        <label>Co-Applicant Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Total_2__c</fullName>
        <formula>IF( Personal_Credit_Report__r.LASERCA__Co_Applicant_Credit_Score_Median__c &gt; 0,BLANKVALUE(Income_App1__c, 0) +  BLANKVALUE(Income_Co_App1__c, 0)  + 
 BLANKVALUE(Additional_Applicant_Income__c, 0),BLANKVALUE(Income_App1__c, 0) +  BLANKVALUE(Additional_Applicant_Income__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Income for Applicant 1, Co-Applicant 1, and Additional Applicant Income.</inlineHelpText>
        <label>Income Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Total__c</fullName>
        <description>Income Total from all related Applicant Contacts</description>
        <formula>Applicant__r.Income_Total__c + Applicant2__r.Income_Total__c +  Applicant3__r.Income_Total__c +
Co_Applicant__r.Income_Total__c + Co_Applicant2__r.Income_Total__c +  Co_Applicant3__r.Income_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Insurance Agent)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FRM</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Analyst2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to inform External Forecasting Reports. Do not change this field without first consulting Brodie Gay or Aditya Bhandari.</description>
        <label>Investment Analyst2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investor_Percent_and_distr_of_proceed_DT__c</fullName>
        <label>Investor Percent and distr of proceed DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Investor_Percentage__c</fullName>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <formula>ROUND((Estimated_Funding_Amount__c * Pricing_Ratio__c) /  Final_OAV_Calculation__c, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Pricing Ratio divided by OAV) x OIP</inlineHelpText>
        <label>Investor Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Investor_Percentage_and_Repay_Amount_DT__c</fullName>
        <label>Investor Percentage and Repay Amount DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Investor_Percentage_and_Repayment_Amo__c</fullName>
        <label>Investor Percentage and Repayment Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable with topic</fullName>
                </value>
                <value>
                    <fullName>Requested additional information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investor_Percentage_and_distr_of_proceed__c</fullName>
        <label>Investor Percentage and distr of proceed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable with topic</fullName>
                </value>
                <value>
                    <fullName>Requested additional information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_HomeBuyer_Express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is HomeBuyer Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NOO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <label>Investment Property Guidelines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_Co_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there Co-App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LO_Training_End__c</fullName>
        <label>LO Training End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LO_Training_Start__c</fullName>
        <label>LO Training Start</label>
        <type>Date</type>
    </fields>
</CustomObject>